--- a/lab06/hackenberry-bio3.html
+++ b/lab06/hackenberry-bio3.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Olivia - Bio</title>
+        <link"stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Olivia's Biography</h1>
