--- a/lab05/hackenberry-bio2.html
+++ b/lab05/hackenberry-bio2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Olivia - Bio</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/lab06/styles.css">
     </head>
     <body>
         <h1>Olivia's Biography</h1>
